src/components/Radio.scss
@import "~@nti/style-common";

label.radio-component {
	input[type=radio] {
		opacity: 0;
		position: absolute;

		& + span.label {
			position: relative;

			// May be necessary to keep labels with links clickable?
			// //iOS workaround
			// pointer-events: none;
			// a { pointer-events: all; }

			&::before {
				content: '';
				position: absolute;
				top: 0.125rem;
				left: -1.625rem;
				width: 1rem;
				height: 1rem;
				background: transparent center/100% no-repeat;
				@include retina-asset('./assets/radio/base', $xCount: 3);
			}
		}

		&:checked + span.label::before {
			@include retina-asset('./assets/radio/select', $xCount: 3);
		}

		&:checked + span.label.green::before {
			@include retina-asset('./assets/radio/select-green', $xCount: 3);
		}

		&:disabled + span.label::before {
			opacity: 0.5;
		}
	}

	input + span.label,
	div.sub {
		margin-left: 1.625rem;
	}

	// html:not(.touch) &:hover {
	// 	input[type=radio] {
	// 		& + span.label::before {
	// 			@include retina-asset('./assets/radio/hover', $xCount: 3);
	// 		}
	//
	// 		&:checked + span.label::before {
	// 			@include retina-asset('./assets/radio/hover-select', $xCount: 3);
	// 		}
	// 	}
	// }

	&.disabled {
		opacity: 0.3;
		pointer-events: none;
	}
}

